# jenga

./: .gitignore  README.md  android.nix  compilers.md  default.nix  nix.md  setup.md  tutorials.md
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs  RhyConcurrent.hs
backend/src/Backend/: Config.hs  DB.hs  Types.hs
backend/src/Backend/DB/: Migrations.hs
backend/src/Backend/Handlers/: Names.hs
backend/src/Backend/Websockets/: Notify.hs  Request.hs  View.hs
backend/src/Backend/Workers/: SendEmail.hs
common/: common.cabal
common/src/Common/: ChatSchema.hs  Constants.hs  Request.hs  Route.hs  Schema.hs  SchemaHelpers.hs  ScrubPrefix.hs  Types.hs  View.hs
common/src/Data/Map/Monoidal/: Extras.hs
config/backend/: adminAddress.json  clientSessionKey  smtp.json
config/common/: route
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Lib.hs
frontend/src/Frontend/Auth/: AuthShell.hs  Authentication.hs  Login.hs  RequestPasswordReset.hs  ResetPassword.hs  Signup.hs
landing-page/: landing-page.cabal
landing-page/src/: Landing.hs
landing-page/src/Landing/: Impl.hs  Markdown.hs  MyShell.hs  Utils.hs
landing-page/src/Landing/Pages/Html/: About.hs  Blog.hs  Elems.hs  Head.hs  Index.hs  Scripts.hs  Style.hs
landing-page/src/Landing/Pages/Markdown/: FirstProgram.hs  W1.hs
static/: default.nix
static/src/: tailwind.config.js
static/src/css/: styles.css
static/src/js/: lib.js
staticSite/: default.nix
staticSite/src/: base.html  tailwind.config.js
staticSite/src/css/: styles.css
staticSite/src/html/: .html  base.html
staticSite/src/html/landing/: Blog.html  FAQ.html  aboutAce.html  aboutMyApp.html  base.html  blog.html  contact.html  faq.html  faq2.html  join-like-a-monad.html  join-the-community.html  pricing.html
staticSite/src/html/landing/4/: bootcamps.html  community.html  recruitingFirms.html  u.html
staticSite/src/html/landing/Blog/: Chapter0.html  Chapter1.html  Chapter2.html  Chapter3.html  Chapter4.html  Chapter5.html  Chapter6.html  Chapter7.html  Chapter8.html  FirstProgram.html  Introduction.html  SetupInstructions.html  main.html
staticSite/src/html/landing/Blog/post/: FutureHiring.html  HEY.html  SignalOverNoise.html  update1.html  update2.html
staticSite/src/landing/: FAQ.html
thunks/ClasshSS/: github.json
thunks/IStr/: github.json
thunks/jenga-auth/: github.json
thunks/lamarckian/: github.json
thunks/lamarckian-core/: github.json
thunks/mmark-ext/: github.json
thunks/reflex-classh/: github.json
thunks/rhyolite/: github.json
thunks/scrappy-requests/: github.json
thunks/templates/: github.json
